syntax = "proto3";

option go_package = "github.com/stephanvebrian/expense-manager/common/account-service";

package accountservice;

import "google/protobuf/any.proto";

service AccountService {
    rpc Ping (GetPingRequest) returns (GetPingResponse) {}
    rpc Login(PostLoginRequest) returns (PostLoginResponse) {}
}

message GetPingRequest {
    string eventLabel = 1;
}

message GetPingResponse {
    string message = 1;
}

enum LoginProvider {
    CREDENTIALS = 0;
    GOOGLESIGNIN = 1;
}

message PostLoginRequest {
    LoginProvider provider = 1;
    map<string, google.protobuf.Any> properties = 2;
}

message TokenResponse {
    string accessToken = 1;
    string refreshToken = 2;
}

message PostLoginResponse {
    TokenResponse token = 1;
}